--- a/style.css
+++ b/style.css
@@ -4,3 +4,10 @@
 .f-color{
     background-color: #FCEAE8;
 }
+.panda-btn{
+    background-image: linear-gradient(to bottom, #FF589B 0%, #FF136F 100%);
+    color: #fff;
+    border: none;
+    border-radius: 8px;
+    padding: 9px 25px;
+}
